@@ -1,7 +1,8 @@
 version 2.5.3
 --------------
 Thanks to Neil Darlow for feedback. Thanks to xloem at sourceforge for bugs
-report, troubleshooting and fixes, great job!
+report, troubleshooting and fixes, great job! Thanks to xloem again for the
+proposed patches.
 
 version 2.5.2
 --------------
